--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi>=0.68.0,<0.69.0
+fastapi==0.95.0
 pydantic>=1.8.0,<2.0.0
-uvicorn>=0.15.0,<0.16.0
+uvicorn==0.21.1
 aiofiles>=23.1.0,<=23.1.0
 jinja2>=3.0,<=3.0
