[create] chatgpt api제작

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -13,6 +13,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: gptkey.txt
+      - run : |
+          cd ./app
+          touch gptkey.txt
+          echo ${{ secrets.GPT_KEY }} > gptkey.txt
+
       - name: Docker build
         run: |
           docker login -u ${{ secrets.USERNAME }} -p ${{ secrets.PASSWORD }}
