[create] 회원가입, 로그인 기능 구현

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Make gptkey.txt
         run : |
-          cd ./app
+          cd ./app/gptapi
           touch gptkey.txt
           echo ${{ secrets.GPT_KEY }} > gptkey.txt
 
