--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ openai==0.27.3
 pillow==9.5.0
 sqlalchemy==2.0.8
 pymysql==1.0.3
+python-multipart==0.0.6
+python-jose==3.3.0
+python-dotenv==1.0.0
+passlib==1.7.4
+bcrypt==4.0.1
