--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Make gptkey.txt
         run : |
-          cd ./app/gptapi
+          cd ./keyfiles
           touch gptkey.txt
           echo ${{ secrets.GPT_KEY }} > gptkey.txt
 
