--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SECRET_KEY=your_secret_key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+GPT_API_KEY=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
