--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -17,8 +17,8 @@ jobs:
         run: |
           docker login -u ${{ secrets.USERNAME }} -p ${{ secrets.PASSWORD }}
           docker build -t docent .
-          docker tag docent docent:${GITHUB_SHA::7}
-          docker push docent:${GITHUB_SHA::7}
+          docker tag docent ssohye/docent:${GITHUB_SHA::7}
+          docker push ssohye/docent:${GITHUB_SHA::7}
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
