--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -27,11 +27,16 @@ jobs:
           key: ${{ secrets.DMZ_GCP_KEY }}
           envs: GITHUB_SHA
           script: |
+            # Stop and remove the existing server container
+            sudo docker stop server || true
+            sudo docker rm server || true
+            
             # Remove all existing Docker images on the target host
-            docker rmi $(docker images -q) || true
-            docker pull ssohye/docent:${GITHUB_SHA::7}
-            docker tag ssohye/docent:${GITHUB_SHA::7} docent
-            docker stop server || true
-            docker rm server || true
-            # Use ssohye/docent:${GITHUB_SHA::7} instead of docent:latest
-            docker run -d --rm --name server -p 8000:8000 docent
+            sudo docker rmi $(sudo docker images -q) || true
+            
+            # Pull the new image
+            sudo docker pull ssohye/docent:${GITHUB_SHA::7}
+            sudo docker tag ssohye/docent:${GITHUB_SHA::7} docent
+            
+            # Run the new image
+            sudo docker run -d --rm --name server -p 8000:8000 docent
