--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -39,4 +39,4 @@ jobs:
             sudo docker tag ssohye/docent:${GITHUB_SHA::7} docent
 
             # Run the new image
-            sudo docker run -d --rm --name server -p 8000:8000 docent
+            sudo docker run -it --name server -p 8000:8000 docent
