--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -15,10 +15,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Docker build
         run: |
-          docker login -u ${{ secrets.USERNAME }} -p ${{ secrets.PASSWORD }}
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
           docker build -t docent .
-          docker tag docent ssohye/docent:${GITHUB_SHA::7}
-          docker push ssohye/docent:${GITHUB_SHA::7}
+          docker tag docent taewan2002/docent:${GITHUB_SHA::7}
+          docker push taewan2002/docent:${GITHUB_SHA::7}
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
@@ -34,8 +34,8 @@ jobs:
             sudo docker rmi -f $(sudo docker images -q) || true
 
             # Pull the new image
-            sudo docker pull ssohye/docent:${GITHUB_SHA::7}
-            sudo docker tag ssohye/docent:${GITHUB_SHA::7} docent
+            sudo docker pull taewan2002/docent:${GITHUB_SHA::7}
+            sudo docker tag taewan2002/docent:${GITHUB_SHA::7} docent
 
             # Run the new image
             sudo docker run -d --rm --name server -p 8000:8000 docent
