도커 무중단 배포 1차시도

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-20.04
 
     steps:
@@ -22,20 +21,38 @@ jobs:
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.DMZ_GCP}}
+          host: ${{ secrets.DMZ_GCP }}
           username: ${{ secrets.DMZ_GCP_USER }}
           key: ${{ secrets.DMZ_GCP_KEY }}
           envs: GITHUB_SHA
           script: |
-            # Stop and remove the existing server container
-            sudo docker stop server
+            # Load the current service version (blue or green)
+            CURRENT_SERVICE=$(cat current_service.txt || echo "blue")
 
-            # Remove all existing Docker images on the target host
-            sudo docker rmi -f $(sudo docker images -q) || true
+            # Determine the new service version
+            if [ "$CURRENT_SERVICE" = "blue" ]; then
+              NEW_SERVICE="green"
+            else
+              NEW_SERVICE="blue"
+            fi
 
             # Pull the new image
             sudo docker pull taewan2002/docent:${GITHUB_SHA::7}
-            sudo docker tag taewan2002/docent:${GITHUB_SHA::7} docent
 
-            # Run the new image
-            sudo docker run -d --rm --name server -p 8000:8000 docent
+            # Stop the previous service, if any
+            sudo docker stop ${NEW_SERVICE} || true
+
+            # Run the new service
+            sudo docker run -d --rm --name ${NEW_SERVICE} -p 800${NEW_SERVICE##*n}:8000 taewan2002/docent:${GITHUB_SHA::7}
+
+            # Update the NGINX configuration
+            sudo sed -i "s/server localhost:800[1-2];/server localhost:800${NEW_SERVICE##*n};/g" /etc/nginx/nginx.conf
+
+            # Reload the NGINX service
+            sudo systemctl reload nginx
+
+            # Stop the old service
+            sudo docker stop ${CURRENT_SERVICE} || true
+
+            # Save the new service version
+            echo "${NEW_SERVICE}" > current_service.txt
