서버 작동여부 확인

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -31,13 +31,11 @@ jobs:
             sudo docker stop server 
 
             # Remove all existing Docker images on the target host
-            sudo docker rmi -f $(sudo docker images -q) || true
+            # sudo docker rmi -f $(sudo docker images -q) || true
 
             # Pull the new image
             sudo docker pull taewan2002/docent:${GITHUB_SHA::7}
             sudo docker tag taewan2002/docent:${GITHUB_SHA::7} docent
 
             # Run the new image
-            sudo docker run -d --rm --name server -p 8000:8000 docent
-            
-            
+            docker run -d --rm --name server -p 8000:8000 docent
