--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -49,7 +49,7 @@ jobs:
             sudo docker run -d --rm --name ${NEW_SERVICE} -p 800${NEW_SERVICE##*n}:8000 taewan2002/docent:${GITHUB_SHA::7}
 
             # Update the NGINX configuration
-            sudo sed -i "s/server localhost:800[1-2];/server localhost:800${NEW_SERVICE##*n};/g" /etc/nginx/nginx.conf
+            sudo sed -i "s/server localhost:800[1-2];/server localhost:8000;\n server localhost:800${NEW_SERVICE##*n};/g" /etc/nginx/nginx.conf
 
             # Reload the NGINX service
             sudo systemctl reload nginx
