--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Docker build
         run: |
-          docker login -u ${{ secrets.USERNAME }} -p ${{ secrets.PASSWORD }}
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
           docker build -t docent .
           docker tag docent taewan2002/docent:${GITHUB_SHA::7}
           docker push taewan2002/docent:${GITHUB_SHA::7}
