이거 왜 실행 안됨?

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -31,3 +31,4 @@ jobs:
             docker tag taewan2002/docent:${GITHUB_SHA::7} docent
             docker stop server
             docker run -d --rm --name server -p 8000:8000 docent
+            sudo docker rmi -f $(sudo docker images -q) || true
