--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -1,4 +1,4 @@
-name: docent
+name: fastapi-cicd
 
 on:
   push:
@@ -15,10 +15,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Docker build
         run: |
-          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-          docker build -t docent .
-          docker tag docent taewan2002/docent:${GITHUB_SHA::7}
-          docker push taewan2002/docent:${GITHUB_SHA::7}
+          docker login -u ${{ secrets.USERNAME }} -p ${{ secrets.PASSWORD }}
+          docker build -t fastapi-cicd .
+          docker tag fastapi-cicd ssohye/fastapi-cicd:${GITHUB_SHA::7}
+          docker push ssohye/fastapi-cicd:${GITHUB_SHA::7}
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
@@ -27,8 +27,7 @@ jobs:
           key: ${{ secrets.DMZ_GCP_KEY }}
           envs: GITHUB_SHA
           script: |
-            docker pull taewan2002/docent:${GITHUB_SHA::7}
-            docker tag taewan2002/docent:${GITHUB_SHA::7} docent
+            docker pull ssohye/fastapi-cicd:${GITHUB_SHA::7}
+            docker tag ssohye/fastapi-cicd:${GITHUB_SHA::7} fastapi-cicd
             docker stop server
-            docker run -d --rm --name server -p 8000:8000 docent
-            sudo docker rmi -f $(sudo docker images -q) || true
+            docker run -d --rm --name server -p 8000:8000 fastapi-cicd
