이거 왜 실행 안됨?

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -1,4 +1,4 @@
-name: fastapi-cicd
+name: docent
 
 on:
   push:
@@ -8,26 +8,55 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v2
       - name: Docker build
         run: |
-          docker login -u ${{ secrets.USERNAME }} -p ${{ secrets.PASSWORD }}
-          docker build -t fastapi-cicd .
-          docker tag fastapi-cicd ssohye/fastapi-cicd:${GITHUB_SHA::7}
-          docker push ssohye/fastapi-cicd:${GITHUB_SHA::7}
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+          docker build -t docent .
+          docker tag docent taewan2002/docent:${GITHUB_SHA::7}
+          docker push taewan2002/docent:${GITHUB_SHA::7}
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.DMZ_GCP}}
+          host: ${{ secrets.DMZ_GCP }}
           username: ${{ secrets.DMZ_GCP_USER }}
           key: ${{ secrets.DMZ_GCP_KEY }}
           envs: GITHUB_SHA
           script: |
-            docker pull ssohye/fastapi-cicd:${GITHUB_SHA::7}
-            docker tag ssohye/fastapi-cicd:${GITHUB_SHA::7} fastapi-cicd
-            docker stop server
-            docker run -d --rm --name server -p 8000:8000 fastapi-cicd
+            # Load the current service version (blue or green)
+            echo "🔍 Checking current_service.txt"
+            CURRENT_SERVICE=$(cat current_service.txt || echo "blue")
+            echo "Current service: ${CURRENT_SERVICE}"
+
+            # Determine the new service version
+            if [ "$CURRENT_SERVICE" = "blue" ]; then
+              NEW_SERVICE="green"
+            else
+              NEW_SERVICE="blue"
+            fi
+            echo "New service: ${NEW_SERVICE}"
+
+            # Pull the new image
+            sudo docker pull taewan2002/docent:${GITHUB_SHA::7}
+
+            # Stop the previous service, if any
+            sudo docker stop ${NEW_SERVICE} || true
+
+            # Run the new service
+            sudo docker run -d --rm --name ${NEW_SERVICE} -p 800${NEW_SERVICE##*n}:8000 taewan2002/docent:${GITHUB_SHA::7}
+
+            # Update the NGINX configuration
+            sudo sed -i "s/server localhost:800[1-2];/server localhost:800${NEW_SERVICE##*n};/g" /etc/nginx/nginx.conf
+
+            # Reload the NGINX service
+            sudo systemctl reload nginx
+
+            # Stop the old service
+            sudo docker stop ${CURRENT_SERVICE} || true
+
+            # Save the new service version
+            echo "📝 Saving new service version to current_service.txt"
+            echo "${NEW_SERVICE}" > current_service.txt
