--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -58,6 +58,9 @@ jobs:
             # Update the NGINX configuration
             sudo sed -i "s/server localhost:800[1-2];/server localhost:${NEW_PORT};/g" /etc/nginx/nginx.conf
 
+            # Update the service-url.inc file
+            sudo sed -i "s|http://localhost:800[1-2]|http://localhost:${NEW_PORT}|g" /etc/nginx/conf.d/service-url.inc
+
             # Reload the NGINX service
             sudo systemctl reload nginx
 
@@ -70,4 +73,6 @@ jobs:
 
             # Cleanup old images
             echo "🧹 Cleaning up old Docker images"
-            sudo docker image prune -a -f --filter "until=24h"
+            sudo docker images -f "dangling=true"
+            sudo docker rmi $(docker images -f "dangling=true" -q)
+            
