--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -64,8 +64,10 @@ jobs:
             # Reload the NGINX service
             sudo systemctl reload nginx
 
-            # Stop the service
-            sudo docker stop ${NEW_SERVICE}
+            # Stop the previous service, if any
+            if sudo docker ps -a --filter "name=^/${NEW_SERVICE}$" --format '{{.Names}}' | grep -qw "${NEW_SERVICE}"; then
+              sudo docker stop ${NEW_SERVICE}
+            fi
 
             # Save the new service version
             echo "📝 Saving new service version to current_service.txt"
