도커 무중단 배포 21차 시도

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -43,7 +43,10 @@ jobs:
             sudo docker pull taewan2002/docent:${GITHUB_SHA::7}
 
             # Stop the previous service, if any
-            sudo docker stop ${NEW_SERVICE} || true
+            if sudo docker ps -a --filter "name=^/${NEW_SERVICE}$" --format '{{.Names}}' | grep -qw "${NEW_SERVICE}"; then
+                sudo docker stop ${NEW_SERVICE}
+            fi
+
 
             # Determine the new port
             if [ "$NEW_SERVICE" = "blue" ]; then
