--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SECRET_KEY=your_secret_key
+SECRET_KEY=cocone0331
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 GPT_API_KEY=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
