--- a/gunicorn_logging.conf
+++ b/gunicorn_logging.conf
@@ -30,4 +30,4 @@ args=(sys.stdout, )
 
 [formatter_generic]
 format=%(asctime)s [%(process)d] [%(levelname)s] %(message)s
-datefmt=%Y-%m-%d %H:%M:%S
+datefmt=%Y-%m-%d %H:%M:%S %z
