--- a/alembic.ini
+++ b/alembic.ini
@@ -59,7 +59,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # the output encoding used when revision files
 # are written from script.py.mako
 # output_encoding = utf-8
-sqlalchemy.url = mysql+pymysql://docent:cocone0331!@db-h4kbh.pub-cdb.ntruss.com/docent
+sqlalchemy.url = mysql+pymysql://docent:cocone0331!@db-h50qv-kr.vpc-pub-cdb.ntruss.com/docent
 
 
 [post_write_hooks]
