--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -21,9 +21,10 @@ jobs:
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.DMZ_GCP }}
-          username: ${{ secrets.DMZ_GCP_USER }}
-          key: ${{ secrets.DMZ_GCP_KEY }}
+          host: ${{ secrets.NCP_HOST }}
+          username: ${{ secrets.NCP_USER }}
+          password: ${{ secrets.NCP_PASSWORD }}
+          key: ${{ secrets.NCP_KEY }}
           envs: GITHUB_SHA
           script: |
             # Load the current service version (blue or green)
