--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -21,10 +21,9 @@ jobs:
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.NCP_HOST }}
-          username: ${{ secrets.NCP_USER }}
-          password: ${{ secrets.NCP_PASSWORD }}
-          key: ${{ secrets.NCP_KEY }}
+          host: ${{ secrets.DMZ_GCP }}
+          username: ${{ secrets.DMZ_GCP_USER }}
+          key: ${{ secrets.DMZ_GCP_KEY }}
           envs: GITHUB_SHA
           script: |
             # Load the current service version (blue or green)
@@ -47,14 +46,14 @@ jobs:
             if [ "$NEW_SERVICE" = "blue" ]; then
               NEW_PORT="8001"
             else
-              NEW_PORT="8002"
+              NEW_PORT="8003"
             fi
 
             # Run the new service
             sudo docker run -d --rm --name ${NEW_SERVICE} -p ${NEW_PORT}:8000 taewan2002/docent:${GITHUB_SHA::7}
 
             # Update the NGINX configuration
-            sudo sed -i "s/server localhost:800[1-2];/server localhost:${NEW_PORT};/g" /etc/nginx/nginx.conf
+            sudo sed -i "s/server localhost:800[1-3];/server localhost:${NEW_PORT};/g" /etc/nginx/nginx.conf
 
             # Update the service-url.inc file
             echo "set \$service_url http://127.0.0.1:${NEW_PORT};" | sudo tee /etc/nginx/conf.d/service-url.inc
