fix: .env 파일 수정

--- a/.env
+++ b/.env
@@ -16,4 +16,4 @@ REDIS_PORT=6379
 REDIS_DB=0
 KAKAO_API_KEY=820e2ce4b063fb8aa2a631eba135c0d2
 KAKAO_CLIENT_SECRET=32Z2COOVR5GE7gVL03mvAuPuWBdMH7vJ
-ROOT_PATH=/
+ROOT_PATH=/api
