--- a/.env-dev
+++ b/.env-dev
@@ -19,3 +19,5 @@ REDIS_DB=0
 KAKAO_API_KEY=820e2ce4b063fb8aa2a631eba135c0d2
 KAKAO_CLIENT_SECRET=32Z2COOVR5GE7gVL03mvAuPuWBdMH7vJ
 ROOT_PATH=/
+MAX_LENGTH=500
+MAX_CALL=20
