feat: 관리자 대시보드 생성 및 슬렉봇 제작

--- a/.env
+++ b/.env
@@ -19,3 +19,5 @@ KAKAO_CLIENT_SECRET=32Z2COOVR5GE7gVL03mvAuPuWBdMH7vJ
 ROOT_PATH=/api
 MAX_LENGTH=500
 MAX_CALL=20
+SLACK_ID=C0647TMEWTF
+SLACK_BOT_TOKEN=xoxb-5804595138643-6140223831702-qTQzGg9hi7aoIyumbQbMLxR2
