--- a/.env-dev
+++ b/.env-dev
@@ -18,6 +18,8 @@ REDIS_PORT=6379
 REDIS_DB=0
 KAKAO_API_KEY=820e2ce4b063fb8aa2a631eba135c0d2
 KAKAO_CLIENT_SECRET=32Z2COOVR5GE7gVL03mvAuPuWBdMH7vJ
-ROOT_PATH=/
+ROOT_PATH=
 MAX_LENGTH=500
 MAX_CALL=20
+SLACK_ID=C0647TMEWTF
+SLACK_BOT_TOKEN=xoxb-5804595138643-6140223831702-qTQzGg9hi7aoIyumbQbMLxR2
