fix: timeout 예외처리

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ LINE_SECRET=8063b8c8482951f053c01f6a3021ca9f
 DB_ADDRESS=db-h50qv-kr.vpc-pub-cdb.ntruss.com
 DB_USER=docent
 DB_PASSWORD=cocone0331!
-DB_NAME=docent_test
+DB_NAME=look_test
 REDIS_HOST=172.17.0.4
 REDIS_PORT=6379
 REDIS_DB=0
