--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v2
@@ -20,10 +20,9 @@ jobs:
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.NCP_HOST_DEV }}
-          port: 1024
-          username: ${{ secrets.NCP_USER_DEV }}
-          password: ${{ secrets.NCP_PASSWORD_DEV }}
+          host: ${{ secrets.NCP_HOST }}
+          username: ${{ secrets.NCP_USER }}
+          password: ${{ secrets.NCP_PASSWORD }}
           key: ${{ secrets.NCP_KEY }}
           envs: GITHUB_SHA
           script: |
