fix: Dockerfile 수정

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -4,11 +4,11 @@ WORKDIR /app
 
 COPY main.py /app/
 COPY app /app/app/
-COPY .env /app/
+COPY .env-dev /app/.env
 COPY requirements.txt /app/
 
 RUN pip install --no-cache-dir -r requirements.txt
 
 ENV PYTHONUNBUFFERED=1
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "8"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "2"]
