--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Docker build
         run: |
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-          docker build -t docent .
+          docker build -f Dockerfile-dev -t docent .
           docker tag docent taewan2002/docent:${GITHUB_SHA::7}
           docker push taewan2002/docent:${GITHUB_SHA::7}
       - name: Deploy
