--- a/.env-prod
+++ b/.env-prod
@@ -33,3 +33,5 @@ APPLE_REDIRECT_URI_DEV=https://bmongsmong.com/callback/apple
 KAKAO_REDIRECT_URI_PROD=https://docent.zip/callback/kakao
 LINE_REDIRECT_URI_PROD=https://docent.zip/callback/line
 APPLE_REDIRECT_URI_PROD=https://docent.zip/callback/apple
+NAVER_CLOUD_ACCESS_KEY_ID=NM4csFZ6EgcoNztDaxbv
+NAVER_CLOUD_SECRET_KEY=DBaTe2nc1BSr2EAzdIIqywKyV1MhdfzwHoHHhu25
