feat: 푸시토큰 저장

--- a/.env-dev
+++ b/.env-dev
@@ -35,3 +35,4 @@ LINE_REDIRECT_URI_PROD=https://docent.zip/callback/line
 APPLE_REDIRECT_URI_PROD=https://docent.zip/callback/apple
 NAVER_CLOUD_ACCESS_KEY_ID=NM4csFZ6EgcoNztDaxbv
 NAVER_CLOUD_SECRET_KEY=DBaTe2nc1BSr2EAzdIIqywKyV1MhdfzwHoHHhu25
+Firebase_API_KEY=BIpZ0ulrR4xjIQQsiJUyhHKmC1vV681U38HJcXDDcvaHGIye5V5-cxF657EoODQt5a4pRphThXk2_L4OICEN-SI
