--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,4 @@ slack_sdk==3.23.0
 cryptography==41.0.5
 apscheduler==3.10.1
 boto3==1.26.160
-frozenlist==1.3.3
-pyjwt~=2.8.0
-requests~=2.31.0
-starlette~=0.26.1
+firebase-admin==6.3.0
